test/scc/ext/tm/semantic-errors/017.a
017.t:5:13: error: volatile objects cannot be used within _Atomic block